Spelling mistakes corrected in the week 1 instructions

--- a/Coursera_Data_Science_Capstone.ipynb
+++ b/Coursera_Data_Science_Capstone.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This jupyter noytebooj will be used for the IBM applied data science course capstone project"
+    "This jupyter notebook will be used for the IBM applied data science course capstone project"
    ]
   },
   {
