Spelling mistake correction on week 3 assignment

--- a/3. Location clustering analysis.ipynb
+++ b/3. Location clustering analysis.ipynb
@@ -281,7 +281,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "geospatical_file = r\"D:\\UserData\\z003ydzv\\OneDrive - Siemens AG\\D Drive\\Data Science Certification - IBM\\10. Applied Data Science Capstone\\Coursera_Capstone\\Geospatial_Coordinates.csv\"\r\n",
+    "geospatical_file = r\"Geospatial_Coordinates.csv\"\r\n",
     "\r\n",
     "geospatical_df=pd.read_csv(geospatical_file)\r\n",
     "geospatical_df"
