Spelling correction with week 3

--- a/3. Location clustering analysis.ipynb
+++ b/3. Location clustering analysis.ipynb
@@ -264,7 +264,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "2. Adding Latitude and logitude data for each Postal Code (Using the geospatial csv file)"
+    "2. Adding Latitude and logitude data for each Postal Code (Using the geospatial csv file using the file provided in the assignment)"
    ],
    "metadata": {}
   },
