Adding map output images for reference

--- a/3. Location clustering analysis.ipynb
+++ b/3. Location clustering analysis.ipynb
@@ -714,6 +714,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Refer the image \"Map neighborhood\" for the output reference."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Define Foursquare API credentials"
    ],
    "metadata": {}
@@ -2196,6 +2203,13 @@
      "metadata": {},
      "execution_count": 25
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Refer the image \"Map Neighborhoods K means Clustered\" for the clustering zones of the neighborhoods."
    ],
    "metadata": {}
   },
